force-app/main/default/objects/Grievance_Category__c/Grievance_Category__c.object-meta.xml
<CustomObject>
    <description>Stores different types of grievances (e.g., sanitation, roads, electricity, water supply) and defines their priority and SLA timelines. Helps in automatic routing of complaints to the right department.</description>
    <label>Grievance Category</label>
    <nameField>
        <label>Grievance Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grievance Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>