force-app/main/default/objects/Grievance_Category__c/fields/Case_Active__c.field-meta.xml
<CustomField>
    <fullName>Case_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this grievance category is currently in use.</description>
    <inlineHelpText>Indicates whether this grievance category is currently in use.</inlineHelpText>
    <label>Case Active</label>
    <type>Checkbox</type>
</CustomField>