force-app/main/default/objects/Grievance_Category__c/fields/Category_ID__c.field-meta.xml
<CustomField>
    <fullName>Category_ID__c</fullName>
    <description>Unique identifier for each grievance category.</description>
    <displayFormat>CAT-{0000}</displayFormat>
    <inlineHelpText>Unique identifier for each grievance category.</inlineHelpText>
    <label>Category ID</label>
    <type>AutoNumber</type>
</CustomField>