force-app/main/default/objects/Grievance_Category__c/fields/Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Category_Name__c</fullName>
    <description>The name of the grievance type</description>
    <inlineHelpText>The name of the grievance type</inlineHelpText>
    <label>Category Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>