force-app/main/default/objects/Grievance_Category__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Grievance Categories (Department)</relationshipLabel>
    <relationshipName>Grievance_Categories1</relationshipName>
    <type>Lookup</type>
</CustomField>