force-app/main/default/objects/Grievance_Category__c/fields/Department_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Department_Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links category to the responsible government department.</description>
    <inlineHelpText>Links category to the responsible government department.</inlineHelpText>
    <label>Department Responsible</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Grievance Categories</relationshipLabel>
    <relationshipName>Grievance_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>