force-app/main/default/objects/Grievance_Category__c/fields/Expected_Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>Expected_Resolution_Time__c</fullName>
    <description>Defines how many days are allowed to resolve grievances in this category.</description>
    <inlineHelpText>Defines how many days are allowed to resolve grievances in this category.</inlineHelpText>
    <label>Expected Resolution Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>